alteração no index html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +27,7 @@
 
     <div id="menu">
       <header>
-        <img src="./assets/logo.png" alt="logo of akatsuki">
+        <img id="logo" src="./assets/logo.png" alt="logo of akatsuki">
         
         <button class="nav" onclick="navbar()">
           <span></span>
@@ -38,18 +38,18 @@
         <nav id="navBar">
           <h2>Menu</h2>
           <div class="cards">
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
+            <button class="btnNavBar" onclick="buttonNav(0)" onmouseenter="stylebtnmenber(0)"> <img src="./assets/btn-nav-member/akatsuki-btn.jpg" alt="" srcset=""><p class='name-btn'>Akatsuki</p></button>
+            <button class="btnNavBar" onclick="buttonNav(1)" onmouseenter="stylebtnmenber(1)"> <img src="./assets/btn-nav-member/zetsu-btn.jpg" alt=""> <p class='name-btn'>Zetsu</p></button>
+            <button class="btnNavBar" onclick="buttonNav(2)" onmouseenter="stylebtnmenber(2)"> <img src="./assets/btn-nav-member/hidan-btn.jpg" alt=""> <p class='name-btn'>Hidan</p></button>
+            <button class="btnNavBar" onclick="buttonNav(3)" onmouseenter="stylebtnmenber(3)"> <img src="./assets/btn-nav-member/deidara-btn.jpg" alt=""> <p class='name-btn'>Deidara</p></button>
+            <button class="btnNavBar" onclick="buttonNav(4)" onmouseenter="stylebtnmenber(4)"> <img src="./assets/btn-nav-member/kakuzu-btn.jpg" alt=""> <p class='name-btn'>Kakuzu</p></button>
+            <button class="btnNavBar" onclick="buttonNav(5)" onmouseenter="stylebtnmenber(5)"> <img src="./assets/btn-nav-member/kisame-btn.jpg" alt=""> <p class='name-btn'>Kisame</p></button>
+            <button class="btnNavBar" onclick="buttonNav(6)" onmouseenter="stylebtnmenber(6)"> <img src="./assets/btn-nav-member/sasori-btn.jpg" alt=""> <p class='name-btn'>Sasori</p></button>
+            <button class="btnNavBar" onclick="buttonNav(7)" onmouseenter="stylebtnmenber(7)"> <img src="./assets/btn-nav-member/konan-btn.jpg" alt=""> <p class='name-btn'>Konan</p></button>
+            <button class="btnNavBar" onclick="buttonNav(8)" onmouseenter="stylebtnmenber(8)"> <img src="./assets/btn-nav-member/orochimaru-btn.jpg" alt=""> <p class='name-btn'>Oro</p></button>
+            <button class="btnNavBar" onclick="buttonNav(9)" onmouseenter="stylebtnmenber(9)"> <img src="./assets/btn-nav-member/obito-btn.jpg" alt=""> <p class='name-btn'>Obito</p></button>
+            <button class="btnNavBar" onclick="buttonNav(10)" onmouseenter="stylebtnmenber(10)"> <img src="./assets/btn-nav-member/itachi-btn.jpg" alt=""> <p class='name-btn'>Itahci</p></button>
+            <button class="btnNavBar" onclick="buttonNav(11)" onmouseenter="stylebtnmenber(11)"> <img src="./assets/btn-nav-member/pain-btn.jpg" alt=""> <p class='name-btn'>Pain</p></button>
           </div>
         </nav>
       </header>
