projeto akatsuki, mostra membro da akatsuki e sua vila, projeto ainda não responsivo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <header>
         <img id="logo" src="./assets/logo.png" alt="logo of akatsuki">
         
-        <audio src="./assets/audio/theme-audio.mp3" autoplay loop></audio>
+        <audio src="./assets/audio/theme-audio.mp3" loop></audio>
         <button id="btn-audio-play"><ion-icon name="volume-high-outline"></ion-icon></button>
         <button class="nav" onclick="navbar()">
           <span></span>
