--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </main>
 
       <footer class="section_footer">
-        Developer By <a href="">Rodrigo Souza</a>
+        Developer By <a href="https://www.linkedin.com/in/rodrigo-souza-90a60a307/" target="_blank" rel="noopener noreferrer">Rodrigo Souza</a>
       </footer>
     </div>
     <script src="./script/scrool-button.js"></script>
